--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,16 @@
 <body>
 <div>
     <h2>Weather from website 1:</h2>
-    <span><h3>Temperature: {{task1[0]}}  °C</h3></span>
-    <span><h3>Wind speed: {{task1[1]}} м/с</h3></span>
+    <span><h3>Temperature: {{task1[0]}}</h3></span>
+    <span><h3>Wind speed: {{task1[1]}}</h3></span>
     <span><h3>Description: {{task1[2]}}</h3></span>
 </div>
 <br>
 
 <div>
     <h2>Weather from website 2:</h2>
-    <span><h3>Temperature: {{task2[0]}}</h3></span>
-    <span><h3>Wind speed: {{task2[1]}}  м/с</h3></span>
+    <span><h3>Temperature: {{task2[0]}} F</h3></span>
+    <span><h3>Wind speed: {{task2[1]}}</h3></span>
     <span><h3>Description: {{task2[2]}}</h3></span>
 </div>
 <br>
@@ -26,7 +26,7 @@
 <div>
     <h2>Weather from website 3:</h2>
     <span><h3>Temperature: {{task3[0]}} C</h3></span>
-    <span><h3>Wind speed: {{task3[1]}}  м/с</h3></span>
+    <span><h3>Wind speed: {{task3[1]}}  mph</h3></span>
     <span><h3>Description: {{task3[2]}}</h3></span>
 </div>
 
